force-app/main/default/objects/Deployment__c/Deployment__c.object-meta.xml
<CustomObject>
    <label>Deployment</label>
    <nameField>
        <displayFormat>DPLY-{000000}</displayFormat>
        <label>Deployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>