force-app/main/default/objects/Deployment__c/fields/Anticipated_Delpoyment_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Delpoyment_Date__c</fullName>
    <label>Anticipated Delpoyment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>