force-app/main/default/objects/Deployment__c/fields/Deployment_Contents__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Contents__c</fullName>
    <inlineHelpText>List the items deployed</inlineHelpText>
    <label>Deployment Contents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>