force-app/main/default/objects/Deployment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Jpetto__Project__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>