force-app/main/default/objects/Deployment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>