force-app/main/default/objects/Deployment__c/fields/Utility_Status__c.field-meta.xml
<CustomField>
    <fullName>Utility_Status__c</fullName>
    <label>Utility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>